--- a/Bibliografia.bib
+++ b/Bibliografia.bib
@@ -78,54 +78,16 @@
 	Year = {2010},
 }
 
-@misc{apache,
-	Date-Added = {2018-11-20 04:22:28 +0000},
-	Date-Modified = {2018-11-20 04:27:36 +0000},
-    key = {Website of the {Apache Collections} library},
-	Howpublished = {\url{https://commons.apache.org/proper/commons-collections/}},
-	Title = {Website of the {Apache Collections} library}}
-
-@misc{jgrapht,
-	Date-Added = {2018-11-20 04:12:21 +0000},
-	Date-Modified = {2018-11-20 04:28:28 +0000},
-	Howpublished = {\url{https://jgrapht.org/}},
-	Title = {Website of the {JGrapht} library},
-    key = {Website of the {JGrapht} library}
-}
-
-@inproceedings{Loncaric:2018,
-	Author = {Calvin Loncaric and Michael D. Ernst and Emina Torlak},
+@inproceedings{sat4j,
+	Author = {Daniel Le Berre and Anne Parrain},
+	title = {The {Sat4j} library, release 2.2},
 	Bibsource = {},
 	Biburl = {},
-	Booktitle = {Proceedings of the 40th International Conference on Software Engineering, {ICSE} 2018, Gothenburg, Sweden, May 27 - June 03, 2018},
-	Date-Added = {2018-11-20 04:07:10 +0000},
-	Date-Modified = {2018-11-20 04:11:29 +0000},
+	Booktitle = {Journal on Satisfiability, Boolean Modeling and Computation, Volume 7, system description},
 	Doi = {},
-	Pages = {958--968},
-	Timestamp = {Thu, 06 Sep 2018 11:47:58 +0200},
-	Title = {Generalized data structure synthesis},
+	Pages = {59--64},
 	Url = {},
-	Year = {2018},
-}
-
-@inproceedings{Sharma:2011,
-	Abstract = {Container classes such as lists, sets, or maps are elementary data structures common to many programming languages. Since they are a part of standard libraries, they are important to test, which led to research on advanced testing techniques targeting such containers and research on comparing testing techniques using such containers. However, these techniques have not been thoroughly compared to simpler techniques such as random testing. We present the results of a larger case study in which we compare random testing with shape abstraction, a systematic technique that showed the best results in a previous study. Our experiments show that random testing is about as effective as shape abstraction for testing these containers, which raises the question whether containers are well suited as a benchmark for comparing advanced testing techniques.},
-	Address = {Berlin, Heidelberg},
-	Author = {Sharma, Rohan and Gligoric, Milos and Arcuri, Andrea and Fraser, Gordon and Marinov, Darko},
-	Booktitle = {Fundamental Approaches to Software Engineering},
-	Editor = {},
-	Isbn = {978-3-642-19811-3},
-	Pages = {262--277},
-	Publisher = {Springer Berlin Heidelberg},
-	Title = {Testing Container Classes: Random or Systematic?},
-	Year = {2011}}
-
-@book{dejong2006evolutionary,
-  author    = {De Jong, Kenneth A.},
-  title     = {Evolutionary Computation: A Unified Approach},
-  year      = {2006},
-  publisher = {MIT Press},
-  address   = {Cambridge, MA},
+	Year = {2010},
 }
 
 
@@ -367,6 +329,52 @@
 	Volume = {58},
 	Year = {2011},
 }
+
+@misc{apache,
+	Date-Added = {2018-11-20 04:22:28 +0000},
+	Date-Modified = {2018-11-20 04:27:36 +0000},
+    key = {Website of the {Apache Collections} library},
+	Howpublished = {\url{https://commons.apache.org/proper/commons-collections/}},
+	Title = {Website of the {Apache Collections} library}
+ }
+
+@misc{jgrapht,
+	Date-Added = {2018-11-20 04:12:21 +0000},
+	Date-Modified = {2018-11-20 04:28:28 +0000},
+	Howpublished = {\url{https://jgrapht.org/}},
+	Title = {Website of the {JGrapht} library},
+    key = {Website of the {JGrapht} library}
+}
+
+@book{goldberg1989genetic,
+  title={Genetic algorithms in search, optimization, and machine learning},
+  author={Goldberg, David E},
+  year={1989},
+  publisher={Addison-Wesley}
+}
+
+@book{cormen2009introduction,
+  title={Introduction to algorithms},
+  author={Cormen, Thomas H and Leiserson, Charles E and Rivest, Ronald L and Stein, Clifford},
+  year={2009},
+  publisher={MIT press}
+}
+
+@inproceedings{Loncaric:2018,
+	Author = {Calvin Loncaric and Michael D. Ernst and Emina Torlak},
+	Bibsource = {},
+	Biburl = {},
+	Booktitle = {Proceedings of the 40th International Conference on Software Engineering, {ICSE} 2018, Gothenburg, Sweden, May 27 - June 03, 2018},
+	Date-Added = {2018-11-20 04:07:10 +0000},
+	Date-Modified = {2018-11-20 04:11:29 +0000},
+	Doi = {},
+	Pages = {958--968},
+	Timestamp = {Thu, 06 Sep 2018 11:47:58 +0200},
+	Title = {Generalized data structure synthesis},
+	Url = {},
+	Year = {2018},
+}
+
 
 @inproceedings{Itzhaky:2014,
 	Acmid = {2735054},
