--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -10,14 +10,32 @@
 % Varios estudios muestran que los enfoques BE son efectivos para revelar fallas en el software [TODO ???]. Además, la llamada hipótesis del cota pequeña [TODO ?], que establece que la mayoría de las fallas de software se pueden revelar ejecutando el SUT en "entradas pequeñas", sugiere que, si se utilizan ámbitos lo suficientemente grandes, los enfoques BE deberían ser capaces de revelar la mayoría (si no todas) las fallas en el SUT. El desafío que enfrentan los enfoques BE es cómo explorar eficientemente un gran espacio de búsqueda, que en el peor de los casos crece exponencialmente con respecto a los ámbitos. El espacio de búsqueda a menudo incluye un gran número de estructuras no válidas (que no satisfacen repOK) y estructuras isomórficas [TODO ??]. Por lo tanto, podar partes del espacio de búsqueda que involucran estructuras inválidas y redundantes es clave para hacer que los enfoques BE se escalen en la práctica [TODO ??]. Escribir especificaciones formales apropiadas para la generación de BE es una tarea desafiante y que consume mucho tiempo. Las especificaciones deben capturar precisamente el conjunto de restricciones previstas en las estructuras. Las especificaciones sobrerestringidas hacen que falte la generación de una parte de las estructuras válidas, lo que puede hacer que la etapa de prueba subsiguiente pierda la exploración de los comportamientos defectuosos del SUT. Las especificaciones subrestringidas pueden llevar a la generación de estructuras inválidas (es decir, estructuras que no cumplen con las restricciones previstas), lo que puede producir falsos negativos durante la prueba del SUT. Además, a veces el usuario tiene que tener en cuenta la forma en que opera el enfoque de generación y escribir las especificaciones de una manera muy específica, de manera que el enfoque pueda lograr un buen rendimiento [TODO ???]. Finalmente, tales especificaciones formales precisas rara vez están disponibles en el software, lo que dificulta la usabilidad de los enfoques BE de caja negra.
 
 \section{Feedback-directed test generation}\label{sec:feedback-directed-test-gen}
+Randoop es una herramienta de generación automática de pruebas que utiliza la técnica de generación aleatoria para explorar el espacio de entrada de un programa y generar casos de prueba automáticamente. Fue desarrollada por Pacheco y Ernst en la Universidad de Washington \cite{pacheco2007randoop}.
 
-La generación de pruebas dirigida por retroalimentación se introdujo por primera vez en el enfoque \textsf{Randoop}, basado en la generación aleatoria de pruebas \cite{Pacheco07}. \textsf{Randoop} requiere un conjunto de rutinas de una API y un budget para la generación de pruebas (tiempo o número de pruebas a generar). \textsf{Randoop} representa las pruebas como secuencias de invocaciones a las rutinas de la API. Por lo tanto, a menudo se llaman \emph{secuencias de prueba}. Comienza con unos pocos valores semilla predeterminados para los tipos primitivos que se utilizarán para instanciar los parámetros de las rutinas de tipos primitivos durante la generación (el usuario también puede proporcionar valores semilla adicionales). \textsf{Randoop} realiza un proceso iterativo. Cada paso consiste en seleccionar aleatoriamente una única rutina \texttt{r(p$_1$,..,p$_k$)} para generar una nueva secuencia de prueba. Para esta rutina, \textsf{Randoop} selecciona aleatoriamente las secuencias \texttt{s$_1$,..,s$_k$} de un conjunto de secuencias de prueba previamente generadas, que se pueden usar para crear valores de los tipos apropiados para instanciar los parámetros \texttt{p$_1$,..,p$_k$} de \texttt{r}, respectivamente. Una nueva prueba \texttt{T} se crea componiendo secuencialmente \texttt{s$_1$,..,s$_k$} y \texttt{r} (y reemplazando los parámetros formales de \texttt{r} por las variables correspondientes en \texttt{s$_1$,..,s$_k$}). \texttt{T} podría ser una prueba ilegal debido al uso no válido de la API y/o fallas en el código en prueba. También podría ser redundante en el sentido de que no produce ninguna estructura para ejercitar el código de manera diferente que las pruebas generadas anteriormente.
+La técnica de generación aleatoria empleada por Randoop consiste en generar de forma automática entradas aleatorias para el programa bajo prueba. Utiliza la reflexión en Java para analizar la estructura del programa y generar una serie de llamadas a métodos con valores de entrada aleatorios. Estas llamadas se combinan de manera inteligente para formar secuencias de instrucciones que representan escenarios de prueba.
+
+Randoop utiliza una estrategia de búsqueda guiada para guiar la generación aleatoria de pruebas. El objetivo de esta estrategia es maximizar la cobertura del programa bajo prueba. Para lograrlo, Randoop utiliza técnicas de generación de casos de prueba basadas en la cobertura de sentencias y la cobertura de ramas del programa \cite{pacheco2007randoop}.
+
+
+
+Randoop ha sido ampliamente utilizado en la industria y en la investigación académica para evaluar la calidad de programas, encontrar errores y mejorar la confiabilidad del software. Ha demostrado ser efectivo en la generación de casos de prueba y en la detección de errores en una variedad de dominios y aplicaciones \cite{pacheco2007randoop, pacheco2008feedback}.
+
+En resumen, Randoop es una herramienta de generación automática de pruebas basada en la técnica de generación aleatoria. Proporciona una forma eficiente y efectiva de generar casos de prueba que cubren diferentes partes de un programa y ayuda en la detección de errores y la mejora de la calidad del software.
+
+La generación de pruebas dirigida por retroalimentación se introdujo por primera vez en el enfoque \textsf{Randoop}, basado en la generación aleatoria de pruebas \cite{Pacheco07}. \textsf{Randoop} requiere un conjunto de rutinas de una API y un budget para la generación de pruebas 
+% (tiempo o número de pruebas a generar). 
+\textsf{Randoop} representa las pruebas como secuencias de invocaciones a las rutinas de la API. Por lo tanto, a menudo se llaman \emph{secuencias de prueba}. Comienza con unos pocos valores semilla predeterminados para los tipos primitivos que se utilizarán para instanciar los parámetros de las rutinas de tipos primitivos durante la generación (el usuario también puede proporcionar valores semilla adicionales). \textsf{Randoop} realiza un proceso iterativo. Cada paso consiste en seleccionar aleatoriamente una única rutina \texttt{r(p$_1$,..,p$_k$)} para generar una nueva secuencia de prueba. Para esta rutina, \textsf{Randoop} selecciona aleatoriamente las secuencias \texttt{s$_1$,..,s$_k$} de un conjunto de secuencias de prueba previamente generadas, que se pueden usar para crear valores de los tipos apropiados para instanciar los parámetros \texttt{p$_1$,..,p$_k$} de \texttt{r}, respectivamente. Una nueva prueba \texttt{T} se crea componiendo secuencialmente \texttt{s$_1$,..,s$_k$} y \texttt{r} (y reemplazando los parámetros formales de \texttt{r} por las variables correspondientes en \texttt{s$_1$,..,s$_k$}). \texttt{T} podría ser una prueba ilegal debido al uso no válido de la API y/o fallas en el código en prueba. También podría ser redundante en el sentido de que no produce ninguna estructura para ejercitar el código de manera diferente que las pruebas generadas anteriormente.
 La idea principal de la generación de pruebas dirigida por retroalimentación es ejecutar \texttt{T} y observar su comportamiento en tiempo de ejecución. Si \texttt{T} es una prueba legal, es decir, su ejecución termina con éxito,
 y \texttt{T} no es redundante, entonces, \texttt{T} se agrega al conjunto de pruebas generadas previamente. Esto hace que \texttt{T} sea un candidato para su posible extensión para generar nuevas pruebas cuando se seleccione un nuevo método en una iteración futura del algoritmo. De lo contrario, si \texttt{T} es una prueba ilegal, por ejemplo, porque genera una excepción o viola un contrato, o si es redundante (consulte la sección~\ref{sec:state-matching})), entonces \texttt{T} no se considera para su posible extensión. \textsf{Randoop} continúa este proceso iterativo hasta que agota su presupuesto. Las evaluaciones experimentales han encontrado que la generación de pruebas dirigida por retroalimentación funciona significativamente mejor que la generación aleatoria simple de pruebas \cite{Pacheco07,Pacheco08}.
+La principal ventaja de \textsf{Randoop} es su capacidad para generar automáticamente una gran cantidad de casos de prueba que cubren diferentes partes del programa bajo prueba. Esto permite detectar errores y comportamientos inesperados que pueden surgir en situaciones de entrada no contempladas durante el desarrollo manual de pruebas.
+Una de las técnicas que presentamos en esta tesis, \textsf{BEAPI}, se basa en \textsf{Randoop}, pero en lugar de la generación aleatoria, tiene como objetivo generar \emph{todas} las secuencias de pruebas factibles (acotadas), dentro de un alcance dado. La retroalimentación de la ejecución permite a \textsf{BEAPI} descartar pruebas ilegales durante el proceso de generación. Además, al estar basado en una generación de pruebas dirigida por retroalimentación, \textsf{BEAPI} genera una secuencia de prueba para cada estructura en el conjunto exhaustivo acotado que construye y solo guarda los conjuntos de secuencias de llamadas a métodos que generan objetos válidos.
 
-% \textsf{BEAPI} se basa en \textsf{Randoop}, pero en lugar de la generación aleatoria, tiene como objetivo generar \emph{todas} las secuencias de pruebas factibles (acotadas), dentro de un alcance dado. La retroalimentación de la ejecución permite a \textsf{BEAPI} descartar pruebas ilegales durante el proceso de generación. Además, al estar basado en una generación de pruebas dirigida por retroalimentación, \textsf{BEAPI} genera una secuencia de prueba para cada estructura en el conjunto exhaustivo acotado que construye. Como se argumenta en la Sección [TODO], esta representación favorece la comprensibilidad y la reutilización de las pruebas generadas con respecto a los enfoques basados en especificaciones relacionados.
+% Cabe destacar que esta modificación se realizó basándonos en la arquitectura y diseño modular de Randoop, lo que permitió una fácil extensión de sus funcionalidades sin afectar su funcionalidad principal.
 
-\section{Algoritmo Geneticos}
+Además, en esta tesis se realizó una modificación de Randoop que consistió en incorporar una funcionalidad que permitiera al usuario especificar un porcentaje de prioridad para un subconjunto de métodos en la generación de pruebas. Al proporcionar un porcentaje de prioridad para un subconjunto de métodos, Randoop tendrá mayor probabilidad de generar casos de prueba que cubran esos métodos específicos de manera más exhaustiva. Y le hemos agregado la posibilidad de serializar los objetos (con secuencia de llamadas a métodos de los test podemos generar objetos) Esto nos permitió utilizarlo como una función de valoración explicadas en \section{sec:randoopObjects}.
+
+
+\section{Algoritmos Genéticos}
 \label{sec:geneticoPrev}
 Los algoritmos genéticos (AG) \cite{goldberg1989genetic} son una técnica de búsqueda y optimización que se inspira en la evolución biológica. Se utilizan para resolver problemas de búsqueda, especialmente problemas de optimización, imitando el proceso de evolución natural. A través de un proceso evolutivo basado en elecciones aleatorias guiadas, los algoritmos genéticos exploran un espacio de soluciones en busca de la mejor solución posible.
 Para abordar un problema utilizando un algoritmo genético, es necesario contar con los siguientes componentes:
@@ -66,13 +84,13 @@ Evaluar la aptitud de cada cromosoma en $P$\;
 
 \item \textbf{Inicialización}: En esta etapa, se crea la población inicial de cromosomas aleatorios. Los cromosomas se generan codificando soluciones candidatas al problema.
 
-\item \textbf{Evaluacion}: En esta etapa, se evalúa la aptitud de cada cromosoma en la población utilizando la función de aptitud. La aptitud se utiliza para guiar la búsqueda y seleccionar los cromosomas más aptos para reproducirse.
+\item \textbf{Evaluación}: En esta etapa, se evalúa la aptitud de cada cromosoma en la población utilizando la función de aptitud. La aptitud se utiliza para guiar la búsqueda y seleccionar los cromosomas más aptos para reproducirse.
 
-\item \textbf{Seleccion}: En esta etapa, se seleccionan los cromosomas más aptos para reproducirse y formar la próxima generación de la población. Los métodos de selección pueden variar, pero generalmente se utiliza la selección por torneo o la selección proporcional al valor de aptitud.
+\item \textbf{Selección}: En esta etapa, se seleccionan los cromosomas más aptos para reproducirse y formar la próxima generación de la población. Los métodos de selección pueden variar, pero generalmente se utiliza la selección por torneo o la selección proporcional al valor de aptitud.
 
 \item \textbf{Cruce}: En esta etapa, se aplican operadores de cruce a los cromosomas seleccionados. El cruce combina los genes de dos cromosomas para generar uno o más descendientes. El tipo de cruce depende del problema y se selecciona según su eficacia para explorar el espacio de soluciones.
 
-\item \textbf{Mutacion}: En esta etapa, se aplican operadores de mutación a los cromosomas seleccionados. La mutación introduce cambios aleatorios en un cromosoma para explorar nuevas regiones del espacio de soluciones. La tasa de mutación controla la probabilidad de que ocurra una mutación en un gen dado.
+\item \textbf{Mutación}: En esta etapa, se aplican operadores de mutación a los cromosomas seleccionados. La mutación introduce cambios aleatorios en un cromosoma para explorar nuevas regiones del espacio de soluciones. La tasa de mutación controla la probabilidad de que ocurra una mutación en un gen dado.
 
 \item \textbf{Reemplazo}: En esta etapa, se reemplazan los cromosomas menos aptos en la población por los descendientes generados mediante el cruce y la mutación. Esto permite que los cromosomas más aptos sobrevivan y transmitan sus características a las siguientes generaciones.
 
@@ -81,11 +99,11 @@ Evaluar la aptitud de cada cromosoma en $P$\;
 
 En resumen, los algoritmos genéticos son una herramienta poderosa y versátil para abordar problemas de optimización y búsqueda en una amplia gama de campos. Su capacidad para explorar ampliamente el espacio de soluciones y su capacidad para manejar problemas complejos los convierten en una opción atractiva para resolver desafíos en diversos dominios.
 
-En esta tesis, nos enfocamos en el uso de AGs para buscar subconjunto de métodos de la API que sean builders. Esto lo hablaremos en detalle en el Capítulo \ref{cap:builders}. Para mas informacion sobre Algoritmo Genticos, puede referirse a \cite{dejong2006evolutionary} 
+En esta tesis, nos enfocamos en el uso de AGs para buscar subconjunto de métodos de la API que sean builders. Esto lo hablaremos en detalle en el Capítulo \ref{cap:builders}. Para más información sobre Algoritmo Genéticos, puede referirse a \cite{dejong2006evolutionary} 
 
 
-\section{Algotirmos Perezosos? (Greedy)}
-
+\section{Algoritmos Perezosos? (Greedy)}
+\label{sec:greedyPrev}
 El algoritmo Greedy es una estrategia de resolución de problemas que sigue un enfoque voraz, tomando decisiones locales óptimas en cada etapa con la esperanza de llegar a una solución global óptima. A diferencia de otros enfoques, el algoritmo Greedy no realiza una búsqueda exhaustiva en el espacio de soluciones, sino que se centra en elegir la mejor opción disponible en cada momento.
 
 El enfoque Greedy se basa en la idea de que, al tomar decisiones óptimas en cada etapa, se puede obtener una solución aproximadamente óptima para el problema en general. Sin embargo, debido a su naturaleza voraz, el algoritmo Greedy puede no garantizar una solución óptima en todos los casos. En algunos casos, el algoritmo puede llegar a un óptimo local, pero no a un óptimo global. Por lo tanto, es importante tener en cuenta las limitaciones y restricciones del problema al aplicar el algoritmo Greedy.
